--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <input type="email" class="form-control" id="exampleFormControlInput1">
         </div>
         <div class="form-group">
-            <label for="exampleFormControlSelect1">Price</label>
-            <input type="number" class="form-control" id="exampleFormControlInput1">
+            <label for="exampleFormControlInput2">Price</label>
+            <input type="number" class="form-control" id="exampleFormControlInput2">
         </div>
         <div class="form-group">
             <label for="exampleFormControlTextarea1">Description</label>
@@ -39,71 +39,24 @@
         </div>
         <button type="button" class="btn btn-primary">Submit</button>
         <div class="form-group">
-            <label for="exampleFormControlSelect1">From:</label>
-            <input type="number" class="form-control" id="exampleFormControlInput1">
-            <label for="exampleFormControlSelect1">To:</label>
-            <input type="number" class="form-control" id="exampleFormControlInput1"><br>    
+            <label for="exampleFormControlInput4">From:</label>
+            <input type="number" class="form-control" id="exampleFormControlInput4">
+            <label for="exampleFormControlInput5">To:</label>
+            <input type="number" class="form-control" id="exampleFormControlInput5"><br>
             <!-- <button type="button" class="btn btn-primary">Filter</button> -->
+        </div>
+        <div class="form-group" style="display: flex;display: ruby;">
+            <p>Sort By:</p>
+            <select class="form-select" aria-label="Default select example">
+                <option selected>Product Id</option>
+                <option value="1">Product Name</option>
+                <option value="2">Price</option>
+            </select>
         </div>
     </form>
 
-    <div style="display: flex; flex-direction: row; flex-wrap: wrap; margin-top: 3%;">
-        <div class="card" style="width: 18rem; margin: auto;">
-            <img class="card-img-top" src="..." alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's
-                    content.</p>
-            </div>
-            <div class="card-body">
-                <a href="#" class="card-link">Card link</a>
-                <a href="#" class="card-link">Another link</a>
-            </div>
-        </div>
 
-        <div class="card" style="width: 18rem; margin: auto;">
-            <img class="card-img-top" src="..." alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's
-                    content.</p>
-            </div>
-            <div class="card-body">
-                <a href="#" class="card-link">Card link</a>
-                <a href="#" class="card-link">Another link</a>
-            </div>
-        </div>
-
-        <div class="card" style="width: 18rem; margin: auto;">
-            <img class="card-img-top" src="..." alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's
-                    content.</p>
-            </div>
-            <div class="card-body">
-                <a href="#" class="card-link">Card link</a>
-                <a href="#" class="card-link">Another link</a>
-            </div>
-        </div>
-
-        <div class="card" style="width: 18rem; margin: auto;">
-            <img class="card-img-top" src="..." alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's
-                    content.</p>
-            </div>
-            <div class="card-body">
-                <a href="#" class="card-link">Card link</a>
-                <a href="#" class="card-link">Another link</a>
-            </div>
-        </div>
-    </div>
+    <div id="card-container" style="display: flex; flex-wrap: wrap; margin-top: 3%;"></div>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
@@ -114,5 +67,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
