--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
             <input type="file" class="form-control-file" id="exampleFormControlFile1">
         </div>
         <button type="button" class="btn btn-primary">Submit</button>
-        <div class="form-group">
+        <div class="form-group" style="width: 25%; display: flex; margin: auto; ">
             <label for="exampleFormControlInput4">From:</label>
-            <input type="number" class="form-control" id="exampleFormControlInput4">
+            <input type="number" class="form-control" id="exampleFormControlInput4">&nbsp;
             <label for="exampleFormControlInput5">To:</label>
-            <input type="number" class="form-control" id="exampleFormControlInput5"><br>
-            <!-- <button type="button" class="btn btn-primary">Filter</button> -->
+            <input type="number" class="form-control" id="exampleFormControlInput5"><br>&nbsp;
+            <button type="button" class="btn btn-primary">Filter</button>
         </div>
         <div class="form-group" style="display: flex;display: ruby;">
             <p>Sort By:</p>
-            <select class="form-select" aria-label="Default select example">
-                <option selected>Product Id</option>
-                <option value="1">Product Name</option>
-                <option value="2">Price</option>
+            <select id="form-select" aria-label="Default select example">
+                <option value="1">Product Id</option>
+                <option value="2">Product Name</option>
+                <option value="3">Price</option>
             </select>
         </div>
     </form>
@@ -69,5 +69,4 @@
         crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
-
 </html>
